# swesat

./: README.md  prompts.py  pyproject.toml
exams/2020-10-25/: facit-hp-2020-10-25.json  provpass-2-verb-utan-elf.json  provpass-3-kvant_norm.json  provpass-4-verb-utan-elf.json  provpass-5-kvant_norm.json
exams/2021-05-08/: hogskoleprovet-facit-21a2.json  provpass-1-verb-utan-elf.json  provpass-2-kvant_norm.json  provpass-4-verb-utan-elf.json  provpass-5-kvant_norm.json
exams/2021-10-24/: hogskoleprovet-facit-21-b.json  provpass-1-kvant_norm.json  provpass-2-verb-utan-elf.json  provpass-4-kvant_norm.json  provpass-5-verb-utan-elf.json
exams/2022-03-12/: hogskoleprovet-facit-22a1.json  provpass-2-verb-utan-elf.json  provpass-3-kvant_norm.json  provpass-4-verb-utan-elf.json  provpass-5-kvant_norm.json
exams/2022-10-23/: hogskoleprovet-facit-22b.json  provpass-1-kvant_norm.json  provpass-2-verb-utan-elf.json  provpass-4-kvant_norm.json  provpass-5-verb-utan-elf.json
exams/2023-03-25/: hogskoleprovet-facit-23a.json  provpass-2-kvant_norm.json  provpass-3-verb-utan-elf.json  provpass-4-kvant_norm.json  provpass-5-verb-utan-elf.json
exams/2023-10-22/: hogskoleprovet-facit-23b.json  provpass-2-kvant_norm.json  provpass-3-verb-utan-elf.json  provpass-4-kvant_norm.json  provpass-5-verb_utan-elf.json
exams/2024-04-13/: hogskoleprovet-facit-24a.json  provpass-1-verb-utan-elf.json  provpass-2-kvant_norm.json  provpass-4-verb-utan-elf.json  provpass-5-kvant_norm.json
process_verbal_sections/: get_pdfs.py  parse_exam_pdf.py  parse_las.py  verbal_utils.py
