[tool.poetry]
name = "swesat"
version = "0.1.0"
description = ""
authors = ["Shorouq <shorouq.zahra@ri.se>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pdfplumber = "^0.11.5"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
